manifests/acme-dns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: acme-dns
---
apiVersion: v1
kind: Service
metadata:
  name: acme-dns
  namespace: acme-dns
spec:
  selector:
    app: acme-dns
  ports:
  - name: https
    protocol: TCP
    port: 443
    targetPort: 443
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: acme-dns-udp
  namespace: acme-dns
spec:
  type: LoadBalancer
  selector:
    app: acme-dns
  ports:
  - name: dns-udp
    protocol: UDP
    port: 53
    targetPort: 53
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: acme-dns
  namespace: acme-dns
  labels:
    app: acme-dns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: acme-dns
  template:
    metadata:
      labels:
        app: acme-dns
    spec:
      containers:
      - name: acme-dns
        image: joohoi/acme-dns:v0.8
        ports:
        - containerPort: 443
          name: https
        - containerPort: 80
          name: http
        - containerPort: 53
          name: dns
        - containerPort: 53
          name: dns-udp
          protocol: UDP
        volumeMounts:
        - name: config-volume
          mountPath: /etc/acme-dns/config.cfg
          subPath: config.cfg
        - name: data-volume
          mountPath: /var/lib/acme-dns
      volumes:
      - name: config-volume
        configMap:
          name: acme-dns-config
      - name: data-volume
        persistentVolumeClaim:
          claimName: acme-dns-pvc
