manifests/codius-auth.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: codius-auth
  namespace: default
  labels:
    app: codius-auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: codius-auth
  template:
    metadata:
      labels:
        app: codius-auth
    spec:
      containers:
      - name: codius-auth
        image: wilsonianbcoil/codius-auth
---
apiVersion: v1
kind: Service
metadata:
  name: codius-auth
  namespace: default
spec:
  selector:
    app: codius-auth
  ports:
  - protocol: TCP
    port: 8080
