manifests/codius-token-auth-webhook.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: codius-token-auth-webhook
  namespace: default
  labels:
    app: codius-token-auth-webhook
spec:
  replicas: 1
  selector:
    matchLabels:
      app: codius-token-auth-webhook
  template:
    metadata:
      labels:
        app: codius-token-auth-webhook
    spec:
      containers:
      - name: codius-token-auth-webhook
        image: wilsonianbcoil/codius-token-auth-webhook
---
apiVersion: v1
kind: Service
metadata:
  name: codius-token-auth-webhook
  namespace: default
spec:
  selector:
    app: codius-token-auth-webhook
  ports:
  - protocol: TCP
    port: 8080
