manifests/codius-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: codius-web
  namespace: default
  labels:
    app: codius-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: codius-web
  template:
    metadata:
      labels:
        app: codius-web
    spec:
      containers:
      - name: codius-web
        image: wilsonianbcoil/codius-web
---
apiVersion: v1
kind: Service
metadata:
  name: codius-web
  namespace: default
spec:
  selector:
    app: codius-web
  ports:
  - protocol: TCP
    port: 3000
