manifests/codius-host-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: codius-host
  namespace: default
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - codius.example.com
    secretName: codius-certificate
  rules:
  - host: codius.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: codius-web
          servicePort: 3000
      - path: /.well-known/pay
        backend:
          serviceName: receipt-verifier
          servicePort: 3001
      - path: /api
        backend:
          serviceName: kubernetes
          servicePort: 443
      - path: /authenticate
        backend:
          serviceName: codius-token-auth-webhook
          servicePort: 8080
      - path: /{id:balances/.*:creditReceipt$}
        backend:
          serviceName: receipt-verifier
          servicePort: 3000
      - path: /favicon.ico
        backend:
          serviceName: codius-web
          servicePort: 3000
      - path: /openapi/v2
        backend:
          serviceName: kubernetes
          servicePort: 443
