manifests/prometheus.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
spec:
  type: ClusterIP
  ports:
  - name: web
    port: 9090
    protocol: TCP
    targetPort: 9090
  selector:
    prometheus: prometheus
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prom-ingress
spec:
  rules:
  - host: "prometheus.codius.example.com"
    http:
      paths:
      - backend:
          serviceName: prometheus
          servicePort: 9090
