manifests/codiusd.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: codius-untrusted
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  namespace: codius-untrusted
  name: codius-untrusted
spec:
  policyTypes:
  - Egress
  podSelector: {}
  egress:
  - to:
    - ipBlock:
       cidr: 0.0.0.0/0
       except:
       - 10.0.0.0/8
       - 172.16.0.0/12
       - 192.168.0.0/16
---
apiVersion: v1
kind: Namespace
metadata:
  name: codiusd
---
apiVersion: v1
kind: Service
metadata:
  name: codiusd-service
  namespace: codiusd
spec:
  type: LoadBalancer
  selector:
    app: codiusd
  ports:
  - protocol: TCP
    port: 3000
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: codiusd
  namespace: codiusd
  annotations:
    kubernetes.io/ingress.class: "traefik"
    ingress.kubernetes.io/ssl-redirect: "true"
    ingress.kubernetes.io/hsts-max-age: "63072000"
    ingress.kubernetes.io/hsts-include-subdomains: "true"
    ingress.kubernetes.io/hsts-preload: "true"
    ingress.kubernetes.io/frame-deny: "true"
    ingress.kubernetes.io/content-type-nosniff: "true"
    ingress.kubernetes.io/browser-xss-filter: "true"
spec:
  tls:
  - hosts:
    - codius.example.com
    - "*.codius.example.com"
  rules:
  - host: "codius.example.com"
    http: &http_rules
      paths:
      - backend:
          serviceName: codiusd-service
          servicePort: 3000
  - host: "*.codius.example.com"
    http: *http_rules
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: codiusd
  namespace: codiusd
  labels:
    app: codiusd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: codiusd
  template:
    metadata:
      labels:
        app: codiusd
    spec:
      containers:
      - name: codiusd
        image: wilsonianbcoil/codiusd
        ports:
        - containerPort: 3000
        - containerPort: 3001
        volumeMounts:
        - name: data-volume
          mountPath: /var/lib/codius
      serviceAccountName: codiusd
      volumes:
      - name: data-volume
        persistentVolumeClaim:
          claimName: codiusd-pvc
